src/assets/styles/components/_app-header.scss
.app-header {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 30px 15px;
    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
    height: 12.5vh;
    .logo {
        display: flex;
        align-items: center;
        color: $clr--black;
        cursor: default;
        .txt {
            font-size: rem(40px);
            text-transform: uppercase;
            font-family: Jost-Bold, sans-serif;
            margin-inline-end: 10px;
        }
    }
    .btn-menu {
        display: none;
    }
}

@media (max-width: 800px) {
    .app-header {
        .btn-menu {
            width: 40px;
            height: 40px;
            font-size: rem(20px);
            display: inherit;
        }
        .main-nav {
            position: fixed;
            top: 0;
            right: 0;
            background-color: rgb(255, 255, 255);
            border: 1px solid #ccc;
            z-index: 30;
            min-width: 240px;
            transform: translateX(100%);
            transition: transform 0.6s, box-shadow 0.6s;
            &.menu-open {
                transform: translateX(0);
                box-shadow: -9px 0px 14px rgba(0, 0, 0, 0.5);
            }
            .nav-list {
                display: flex;
                flex-direction: column;
                height: 100vh;
                li {
                    border-bottom: 1px solid #ccc;
                }
                a,
                a:visited {
                    padding: 14px;
                    display: block;
                    color: $clr2;
                    text-transform: uppercase;
                    font-size: rem(24px);
                }
                @media (hover: hover) {
                    a:hover {
                        background-color: lighten($clr1, 38%);
                    }
                }
            }
        }
    }
}

@include for-small-layout {
    .app-header {
        .logo {
            .txt {
                font-size: rem(50px);
            }
        }
    }
}

@include for-medium-layout {
    .app-header {
        padding-left: 50px;
        .logo {
            .txt {
                font-size: rem(60px);
            }
        }
        .main-nav {
            width: calc((1130 / 1920) * 100vw - 20px);
            .menu {
                display: none;
            }
            .nav-list {
                display: flex;
                justify-content: center;
                gap: 40px;
                > * {
                    text-align: right;
                }

                a,
                a:visited {
                    font-size: rem(22px);
                    color: $clr--white;
                    text-transform: uppercase;
                }
                a:hover {
                    color: $clr2;
                }
            }
        }
    }
}

@include for-large-layout {
    .app-header {
        padding-left: 100px;
        .main-nav {
            .nav-list {
                a,
                a:visited {
                    font-size: inherit;
                }
            }
        }
    }
}

